# PR-Review-Comment-Memory

./: .env.example  .gitignore  AGENTS.md  README.md  git_comment_memory.md  pyproject.toml
.cursor/rules/: team-coding-dna.mdc
.github/workflows/: team-coding-dna.yml
src/team_coding_dna/: __init__.py  adapters.py  cli.py  distill.py  mcp_server.py  memory.py  retrieval.py  seeds.py
src/team_coding_dna/mining/: __init__.py  cluster.py  git_source.py  github_source.py
tests/: test_adapters.py  test_cluster.py  test_diff.py  test_mcp_mine.py  test_memory.py  test_retrieval.py
